mdmCeneveo/src/objects/Customer_Credit_Information__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Amount_Requested__c</fullName>
        <label>Credit Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_From_Date__c</fullName>
        <label>Credit Hold From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_Reason__c</fullName>
        <label>Credit Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_to_date__c</fullName>
        <label>Credit Hold to date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Message__c</fullName>
        <label>Credit Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Review_Date__c</fullName>
        <label>Credit Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Statement_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Statement flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Charges_Percentage__c</fullName>
        <label>Finance Charges Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_JDE_Payment_Terms__c</fullName>
        <label>Future JDE Payment Terms</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Payments_Terms__c</fullName>
        <label>Future Payments Terms</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Customer_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JDE_Payment_Terms_Future_Date__c</fullName>
        <label>JDE Payment Terms Future Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JDE_Payment_Terms__c</fullName>
        <label>JDE Payment Terms</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Credit_Review_Date__c</fullName>
        <label>Last Credit Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Party_Relation_Ship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Relation Ship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Customer Credit Informations</relationshipLabel>
        <relationshipName>Customer_Credit_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Hold_From_Date__c</fullName>
        <label>Payment Hold From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Hold_Reason__c</fullName>
        <label>Payment Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Hold_to_date__c</fullName>
        <label>Payment Hold to date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Future_Date__c</fullName>
        <label>Payment Terms Future Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guaranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Guaranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receivable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receivable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Comments__c</fullName>
        <label>Requestor Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Cenveo_Business_Unit_ID__c</fullName>
        <label>Responsible Cenveo Business Unit ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Cenveo_Business_Unit__c</fullName>
        <label>Responsible Cenveo Business Unit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Credit_limit__c</fullName>
        <label>Total Credit limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Customer Credit Information</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Customer Credit Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Credit Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>